# rules_spark

./: .bazelproject  .envrc  .gitignore  .kubeconfig  BUILD.bazel  README.md  WORKSPACE
examples/: namespace-prereqs.yaml
examples/main/scala/com/example/periodicpi/: BUILD.bazel  cronjob.yaml
examples/main/scala/com/example/streamingwordcount/: BUILD.bazel  Main.scala  deployment.yaml  netcat.sh
jar_bundle/: BUILD.bazel  pom.xml  settings.xml
launcher/: BUILD.bazel  README.md  driver.go  launcher.go  launcher_test.go  main.go  pod_discovery.go  types.go
launcher/testdata/: driver-pod.json  spark-executor-pod-info.json
spark/: BUILD.bazel  README.md  dependencies.bzl  scala.bzl  uberjar.bzl
spark/internal/: BUILD  RepackageJar.java  uberjar.BUILD
tools/: bazel.rc  print-workspace-status.sh
