load("//spark:scala.bzl", "spark_scala_image")
load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")

spark_scala_image(
    name = "periodicpi",
    srcs = ["Main.scala"],
    files = [":log4j.properties"],
    layers = [
        "@rules_spark//jar_bundle"
    ],
    main_class = "com.example.periodicpi.Main",
)

k8s_object(
    name = "cronjob",
    cluster = "{STABLE_K8S_CLUSTER}",
    image_chroot = "{STABLE_IMAGE_CHROOT}",
    images = {
        "periodicpi:dev": ":periodicpi",
    },
    template = ":cronjob.yaml",
    visibility = ["//visibility:public"],
)
